@@ -1,3 +1,6 @@
+2003-06-26  Tim Waugh  <twaugh@redhat.com>
+	* src/plugins/Ancestors.py: Cite sources.
+
 2003-06-26  Don Allingham  <dallingham@users.sourceforge.net>
 	* src/plugins/Makefile.am: Added BookReport.py
 
